# rustgen

./: .gitignore  Cargo.toml  FOUND.txt  README.md  config.json  finder_config.json  prd.md
.bmad-core/: core-config.yaml  install-manifest.yaml
.bmad-core/tasks/: seed-recovery-cpu-finder.md  seed-recovery-generator.md  seed-recovery-gpu-finder.md
.cursor/rules/bmad/: bmad-master.mdc  bmad-orchestrator.mdc
docs/: prd.md
seeds/: checkpoint.json
src/: finder_cpu.rs  generator.rs  main.rs
