[package]
name = "seed-recovery"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "generator"
path = "src/generator.rs"

[[bin]]
name = "finder_cpu"
path = "src/finder_cpu.rs"


[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }

# Crypto
sha2 = "0.10"
bip39 = "2.0"
tiny-hderive = "0.3"
secp256k1 = "0.28"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hmac = "0.12"
bitcoin = "0.30"

# Performance
rayon = "1.8"
memmap2 = "0.9"
ocl = "0.19"  # OpenCL for GPU
indicatif = "0.17"  # Progress bars
hex = "0.4"
num_cpus = "1.16"

[profile.dev]
opt-level = 1  # Enable some optimizations even in debug mode

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
target-cpu = "native"